--- a/templates/show.html
+++ b/templates/show.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Username is {{username}}</h1>
-<h2>Password is {{password}}</h2>
-<h2>You can't access</h2>
-</body>
-</html>
+<form method="POST" action="/test" enctype="multipart/form-data">
+  <input type="file" id="myFile" name="filename" />
+  <button type="submit">Submit</button>
+</form>
