--- a/static/css/LDashboardStyle.css
+++ b/static/css/LDashboardStyle.css
@@ -2,7 +2,7 @@ body {
   padding: 0;
   margin: 0;
   background: #eee;
-  background-image: url(https://lh3.googleusercontent.com/proxy/JibyBMQFkWoQJ2w9ddWmMs33kpP1noac5Qq8WS0cE5R6z5hTsteRHzMCUD_fQRnHQMRN_NA7nZIyMVueeGF1I6gVBJB-phY7y60qvOgp_Q);
+  background-image: url(https://epicglobes.com/wp-content/uploads/white-blue-technology-background-vector-20643924.jpg);
   background-size: cover;
 }
 .all {
